# winux

./: .gitignore  README.md  pyproject.toml
linuxConverter/: __init__.py  cli.py  command_parser.py  executor.py  models.py  pipeline_parser.py  prompting.py  shell_state.py  translator.py
tests/: test_cli_args.py  test_executor.py  test_shell_state.py  test_translator.py
